# double_service

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
service_1/: alembic.ini  pyproject.toml
service_1/alembic/: env.py
service_1/alembic/versions/: 02e05ae31937_initial.py  08e900478410_initial.py  2423c75a2d38_initial.py  2679924bbf76_initial.py  7bcd729f2e87_initial.py  92d8faffd679_initial.py  96e6ed019b1a_.py  b1fe8fd4f307_initial.py  c2b7229bbc81_initial.py  cb12ddfeae3a_initial.py  d72f2ac1b0b6_initial.py  ef7e3562b33f_initial.py
service_1/migrations/: env.py
service_1/service_1/: run_server.py
service_2/: pyproject.toml
service_2/alembic/: env.py
service_2/alembic/versions/: 12a64de2b9f2_initial.py
service_2/service_2/: run_server.py
service_2/service_2/api/v1/: app.py
service_2/service_2/app_service_2/: models.py
service_2/service_2/app_service_2/dto/: user.py
service_2/service_2/app_service_2/repositories/: upload_file_repository.py  user_repository.py
service_2/service_2/app_service_2/repositories/abstract/: abstract_upload_file_repository.py  abstract_user_repository.py
service_2/service_2/app_service_2/shemas/: server_answer.py
service_2/service_2/app_service_2/shemas/api/v1/: shema_api_v1.py
service_2/service_2/app_service_2/uow/: file_uow.py
service_2/service_2/app_service_2/uow/abstract/: abstract_uow.py
service_2/service_2/app_service_2/utils/: check_token.py  generate_token.py  generate_user_id.py  hash_token.py
service_2/service_2/settings/: base.py  settings.py
(+14 files in other folders)
